# timescaledb-sqlalchemy-fastapi-multitenancy-demo

./: .gitignore  README.md  docker-compose.yaml
backend/: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
backend/database/: __init__.py
backend/dto/: __init__.py  sensors_data.py
backend/requirements/: base.txt  dev.txt
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: AccessTokenInfo.tsx  App.tsx  Footer.tsx  Header.tsx  IdTokenInfo.tsx  Layout.tsx  Login.tsx  auth-context.tsx  main.tsx  require-auth.tsx
frontend/src/firebase-lib/: app.ts  hooks.ts
timescaledb/: setup.sh
